--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "custom-react-scripts": "0.2.0",
+    "normalize.css": "^7.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-icons": "^2.2.5",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "standart": "^6.1.0"
