--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "custom-react-scripts": "0.2.0",
     "lodash": "^4.17.4",
     "normalize.css": "^7.0.0",
