--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-icons": "^2.2.5",
+    "react-infinite-scroll-component": "^2.4.0",
     "react-redux": "^5.0.6",
     "react-scrollable-anchor": "^0.5.0",
     "redux": "^3.7.2",
