--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "backgrounder",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "axios": "^0.16.2",
-    "custom-react-scripts": "0.2.0",
-    "datejs": "^1.0.0-rc3",
-    "lodash": "^4.17.4",
-    "normalize.css": "^7.0.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-icons": "^2.2.5",
-    "react-infinite-scroll-component": "^2.4.0",
-    "react-redux": "^5.0.6",
-    "react-scrollable-anchor": "^0.5.0",
-    "redux": "^3.7.2",
-    "standart": "^6.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "moment": "^2.18.1"
-  }
+    "name": "backgrounder",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "axios": "^0.16.2",
+        "custom-react-scripts": "0.2.0",
+        "normalize.css": "^7.0.0",
+        "react": "^15.6.1",
+        "react-dom": "^15.6.1",
+        "react-icons": "^2.2.5",
+        "react-list": "^0.8.7",
+        "react-redux": "^5.0.6",
+        "react-scrollable-anchor": "^0.5.0",
+        "redux": "^3.7.2",
+        "redux-infinite-scroll": "^1.0.9",
+        "redux-thunk": "^2.2.0",
+        "standart": "^6.1.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
+    }
 }
