--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
         "react-redux": "^5.0.6",
         "react-scrollable-anchor": "^0.5.0",
         "redux": "^3.7.2",
+        "redux-devtools-extension": "^2.13.2",
         "redux-infinite-scroll": "^1.0.9",
+        "redux-logger": "^3.0.6",
+        "redux-promise-middleware": "^4.4.1",
         "redux-thunk": "^2.2.0",
         "standart": "^6.1.0"
     },
