--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "dependencies": {
         "axios": "^0.16.2",
         "custom-react-scripts": "0.2.0",
+        "material-ui": "^0.19.1",
         "normalize.css": "^7.0.0",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
         "react-icons": "^2.2.5",
-        "react-list": "^0.8.7",
+        "react-infinite-scroller": "^1.0.15",
         "react-redux": "^5.0.6",
-        "react-scrollable-anchor": "^0.5.0",
+        "react-tap-event-plugin": "^2.0.1",
         "redux": "^3.7.2",
         "redux-devtools-extension": "^2.13.2",
         "redux-infinite-scroll": "^1.0.9",
