--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "axios": "^0.16.2",
         "custom-react-scripts": "0.2.0",
+        "date-and-time": "^0.5.0",
         "material-ui": "^0.19.1",
         "normalize.css": "^7.0.0",
         "react": "^15.6.1",
