--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "react-icons": "^2.2.5",
         "react-infinite-scroller": "^1.0.15",
         "react-redux": "^5.0.6",
+        "react-scroll-to-component": "^1.0.2",
+        "react-scrollchor": "^4.2.1",
         "react-tap-event-plugin": "^2.0.1",
         "redux": "^3.7.2",
         "redux-devtools-extension": "^2.13.2",
