--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "http://cubbk.github.io/backgrounder",
     "name": "backgrounder",
     "version": "0.1.0",
     "private": true,
@@ -6,6 +7,7 @@
         "axios": "^0.16.2",
         "custom-react-scripts": "0.2.0",
         "date-and-time": "^0.5.0",
+        "gh-pages": "^1.1.0",
         "material-ui": "^0.19.1",
         "normalize.css": "^7.0.0",
         "react": "^15.6.1",
@@ -28,6 +30,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     }
 }
