--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-scroll-to-component": "^1.0.2",
         "react-scrollchor": "^4.2.1",
         "react-tap-event-plugin": "^2.0.1",
+        "react-transition-group": "^2.2.1",
         "redux": "^3.7.2",
         "redux-devtools-extension": "^2.13.2",
         "redux-infinite-scroll": "^1.0.9",
