--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "material-ui": "^0.19.1",
         "normalize.css": "^7.0.0",
         "react": "^15.6.1",
+        "react-animated-css": "^1.0.4",
         "react-dom": "^15.6.1",
         "react-icons": "^2.2.5",
         "react-infinite-scroller": "^1.0.15",
