--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "gh-pages": "^1.1.0",
         "material-ui": "^0.19.1",
         "normalize.css": "^7.0.0",
+        "ramda": "^0.25.0",
         "react": "^15.6.1",
         "react-animated-css": "^1.0.4",
         "react-dom": "^15.6.1",
