--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "custom-react-scripts": "0.2.0",
         "date-and-time": "^0.5.0",
         "gh-pages": "^1.1.0",
+        "immutadot": "^1.0.0",
         "material-ui": "^0.19.1",
         "normalize.css": "^7.0.0",
         "ramda": "^0.25.0",
