--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "homepage": "http://cubbk.github.io/backgrounder",
-    "name": "backgrounder",
+    "homepage": "http://cubbk.github.io/scroll-the-universe",
+    "name": "scroll-the-universe",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
