add redirect from 404 page to index to fix gh pages

--- a/.env
+++ b/.env
@@ -12,4 +12,7 @@ REACT_APP_LESS_MODULES = true;
 
 REACT_APP_WEBPACK_DASHBOARD = true;
 
+REACT_APP_HOMEPAGE = https://cubbk.github.io/scroll-the-universe;
+
 NODE_PATH=src/
+
